@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1.1.1 2011/10/16 05:34:58 manu Exp $
+$NetBSD: distinfo,v 1.2 2011/12/14 15:02:24 manu Exp $
 
-SHA1 (SOPE-2.0.0b1.tar.gz) = 37e85b3cb9802b9df0a9cab196b8c0ad0a7d7832
-RMD160 (SOPE-2.0.0b1.tar.gz) = 551c340a1cef76cad63bc9cfec957440c109c9eb
-Size (SOPE-2.0.0b1.tar.gz) = 2156846 bytes
+SHA1 (SOPE-2.0.0b3.tar.gz) = 9f2b337f0d9015377fba81a4e1cc0e95141e6b59
+RMD160 (SOPE-2.0.0b3.tar.gz) = 45311144e883c7415a338ae7e634865b92c5baaa
+Size (SOPE-2.0.0b3.tar.gz) = 2153481 bytes
